Bug 121014 - The Hyperlink tip is not displayed inside shape or text box in Writer
Summary: The Hyperlink tip is not displayed inside shape or text box in Writer
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: low minor
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: target:6.4.0
Keywords:
Depends on:
Blocks: Textbox Hyperlink Shapes
  Show dependency treegraph
 
Reported: 2018-10-29 11:36 UTC by Usama
Modified: 2019-10-02 11:30 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
example writer file (10.01 KB, application/vnd.oasis.opendocument.text)
2018-10-29 11:36 UTC, Usama
Details
screen video gif showing the bug (73.28 KB, image/gif)
2018-10-29 11:37 UTC, Usama
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Usama 2018-10-29 11:36:45 UTC
Created attachment 146128 [details]
example writer file

No tip about opening a link is shown when I hover over a link that is inside a shape or inside a text box in Writer.

Observed:
No tip about opening a link is shown when I hover over a link that is inside a shape or inside a text box in Writer.

What is expected:

A tip saying "Ctrl-click to follow hyperlink + (the link) is expected to be shown when hovering over a link


Version: 6.2.0.0.alpha1+
Build ID: 96cf06c947838120e37f3fbb4d0543dd882cb20c
CPU threads: 4; OS: Linux 4.4; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2018-10-25_22:45:16
Locale: tr-TR (tr_TR.UTF-8); Calc: threaded
Comment 1 Usama 2018-10-29 11:37:49 UTC
Created attachment 146129 [details]
screen video gif showing the bug
Comment 2 Buovjaga 2018-10-29 11:53:44 UTC
Confirmed

Arch Linux 64-bit
Version: 6.2.0.0.alpha1+
Build ID: bfa6aeb379e5dfcf6f1f97b3365ab551995ab3d5
CPU threads: 8; OS: Linux 4.18; UI render: default; VCL: gtk3_kde5; 
Locale: fi-FI (fi_FI.UTF-8); Calc: threaded
Built on 28 October 2018

Arch Linux 64-bit
LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4
Comment 3 Buovjaga 2018-12-21 13:43:11 UTC
*** Bug 119664 has been marked as a duplicate of this bug. ***
Comment 4 Commit Notification 2019-07-12 05:58:30 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/44df407f63bc20c402b513e9e38470517a775317%5E%21

tdf#121014 Display tooltip for URLs in Writer textboxes/shapes

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Buovjaga 2019-07-12 17:17:24 UTC
It is working now with all other Linux backends except gtk3! Should I open a new report for it?

Arch Linux 64-bit
Version: 6.4.0.0.alpha0+
Build ID: 1ce1c26dd98e6477139e08d1ebe89fa950ff5fb0
CPU threads: 8; OS: Linux 5.2; UI render: default; VCL: gtk3; 
Locale: fi-FI (fi_FI.UTF-8); UI-Language: en-US
Calc: threaded
Built on 12 July 2019
Comment 6 Samuel Mehrbrodt 2019-09-30 08:48:17 UTC
(In reply to Buovjaga from comment #5)
> It is working now with all other Linux backends except gtk3! Should I open a
> new report for it?
> 
Yes, if you can confirm the bug, please open a new one for that.