tdf#121014 Display tooltip for URLs in Writer textboxes/shapes

Change-Id: I7be36f804079bf415b1b548c997c97513f34730d